# fastapi_ml_template

./: .gitignore  README.md  pyproject.toml
api/: Dockerfile  README.md  main.py  requirements.txt
api/src/endpoints/: process.py  status.py
api/src/utils/: file_loader.py
common_tools/src/: config_loader.py  custom_error_handlers.py  custom_logger.py  file_handler.py  loss.py  metrics.py  ml_monitoring.py
ml/: main.py  mlflow.sh
ml/config/: srcnn.json  test.json
ml/src/datasets/: base.py  bsds100.py  bsds200.py  bsds300.py  bsds500.py  dataset_selector.py  general100.py  historical.py  manga109.py  set14.py  set5.py  t91.py  urban100.py
ml/src/models/: base.py  baseline.py  cnn.py  edsr.py  espcn.py  model_selector.py  model_wrapper.py  srresnet.py  vdsr.py
ml/src/monitors/: mlflow_monitor.py
ml/src/trainers/: torch_trainer.py
